--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^15.1.5",
     "@angular/router": "^15.1.5",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "jquery": "^3.6.3",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.6",
-    "@angular/cli": "^15.1.6",
+    "@angular/cli": "^15.2.6",
     "@angular/compiler-cli": "^15.1.5",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
@@ -49,6 +50,5 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
